complete rent part

--- a/index.html
+++ b/index.html
@@ -100,11 +100,194 @@
       </div>
     </section>
     <!-- banner_part end -->
+    <!-- statistic_part start -->
+    <section id="stat_sec" class="stat_part">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <div class="stat_part_content">
+              <h2>
+                Our’s Company<br />
+                Statistics
+              </h2>
+              <p>
+                In this space market-facing, yet UI work flows , or bake it in.
+                Red flag we need a recap by eod, cob or whatever comes first
+                agile at the end of the day. Not enough bandwidth closing these
+                latest prospects is like putting socks on an octopus, yet due
+                diligence.
+              </p>
+
+              <p>
+                We need to get all stakeholders up to speed and in the right
+                place hard stop, or technologically savvy or pre launch.
+                Pro-sumer software commitment to the cause offline this
+                discussion and wiggle room blue sky. Beef up teams were able to
+                drive adoption and awareness. Screw the pooch killing it.
+              </p>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="stat_part_counter">
+              <div class="flex">
+                <div>
+                  <h3 id="num1">748</h3>
+                  <h4>Appartments</h4>
+                </div>
+                <div>
+                  <h3 id="num2">3854</h3>
+                  <h4>Clients</h4>
+                </div>
+                <div>
+                  <h3 id="num3">24</h3>
+                  <h4>Employees</h4>
+                </div>
+                <div>
+                  <h3 id="num4">14</h3>
+                  <h4>Awards</h4>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- statistic_part end -->
+    <!-- appartment_part start -->
+    <section id="appartment_sec" class="appartment_part">
+      <div class="container">
+        <div class="row">
+          <h2>
+            More Then 500+ <br />
+            Appartments For Rent
+          </h2>
+          <div class="col-md-4">
+            <div class="appartment_item">
+              <div class="appartment_item_img">
+                <img src="image/rent_item.png" alt="" />
+              </div>
+              <div class="appartment_item_content">
+                <h5>Random Street, Apt B453, New York</h5>
+                <span class="appartment_price">$3,500</span>
+                <div class="app_right_bottom">
+                  <img src="image/shape_1.png" alt="" />2 BA
+                  <img src="image/shape_2.png" alt="" />2 BD
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="appartment_item">
+              <div class="appartment_item_img">
+                <img src="image/rent_item.png" alt="" />
+              </div>
+              <div class="appartment_item_content">
+                <h5>Random Street, Apt B454, New York</h5>
+                <span class="appartment_price">$3,600</span>
+                <div class="app_right_bottom">
+                  <img src="image/shape_1.png" alt="" />2 BA
+                  <img src="image/shape_2.png" alt="" />3 BD
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="appartment_item">
+              <div class="appartment_item_img">
+                <img src="image/rent_item.png" alt="" />
+              </div>
+              <div class="appartment_item_content">
+                <h5>Random Street, Apt B455, New York</h5>
+                <span class="appartment_price">$3,700</span>
+                <div class="app_right_bottom">
+                  <img src="image/shape_1.png" alt="" />3 BA
+                  <img src="image/shape_2.png" alt="" />2 BD
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="appartment_item">
+              <div class="appartment_item_img">
+                <img src="image/rent_item.png" alt="" />
+              </div>
+              <div class="appartment_item_content">
+                <h5>Random Street, Apt B456, New York</h5>
+                <span class="appartment_price">$4,000</span>
+                <div class="app_right_bottom">
+                  <img src="image/shape_1.png" alt="" />2 BA
+                  <img src="image/shape_2.png" alt="" />2 BD
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="appartment_item">
+              <div class="appartment_item_img">
+                <img src="image/rent_item.png" alt="" />
+              </div>
+              <div class="appartment_item_content">
+                <h5>Random Street, Apt B453, New York</h5>
+                <span class="appartment_price">$3,500</span>
+                <div class="app_right_bottom">
+                  <img src="image/shape_1.png" alt="" />2 BA
+                  <img src="image/shape_2.png" alt="" />2 BD
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="appartment_item">
+              <div class="appartment_item_img">
+                <img src="image/rent_item.png" alt="" />
+              </div>
+              <div class="appartment_item_content">
+                <h5>Random Street, Apt B453, New York</h5>
+                <span class="appartment_price">$3,500</span>
+                <div class="app_right_bottom">
+                  <img src="image/shape_1.png" alt="" />2 BA
+                  <img src="image/shape_2.png" alt="" />2 BD
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="search_item_box">
+            <input
+              type="search"
+              name="search-location"
+              id="#"
+              placeholder="Search-Location"
+            />
+            <i class="fa-solid fa-magnifying-glass"></i>
+            <button type="submit">Search</button>
+            <button type="submit" class="view_button">
+              View All Appartments
+            </button>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- appartment_part end -->
+    <!-- works_part start -->
+    <secction id="works_sec" class="works_part">
+      <div class="container">
+        <div class="row">
+          <h2>How it works?</h2>
+          <p class="col-md-4">
+            In this space market-facing, yet UI work flows , or bake it in. Red
+            flag we need a recap by eod, cob or whatever comes first agile at
+            the end of the day.
+          </p>
+        </div>
+      </div>
+    </secction>
+    <!-- works_part end -->
 
     <!-- All JS link here-->
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
+    <script src="js/countMe.min.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
