work part complete

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
     </section>
     <!-- appartment_part end -->
     <!-- works_part start -->
-    <secction id="works_sec" class="works_part">
+    <section id="works_sec" class="works_part">
       <div class="container">
         <div class="row">
           <h2>How it works?</h2>
@@ -278,9 +278,44 @@
             flag we need a recap by eod, cob or whatever comes first agile at
             the end of the day.
           </p>
+          <div class="row">
+            <div class="col-md-4">
+              <div class="work_item active">
+                <h2>01</h2>
+                <h4>01. Find Your Location</h4>
+                <p>
+                  In this space market-facing, yet UI work flows , or bake it
+                  in. Red flag we neef the day.
+                </p>
+                <h6>Find Location</h6>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="work_item">
+                <h2>02</h2>
+                <h4>02. Find Appartment</h4>
+                <p>
+                  In this space market-facing, yet UI work flows , or bake it
+                  in. Red flag we neef the day.
+                </p>
+                <h6>Find Appartment</h6>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="work_item">
+                <h2>03</h2>
+                <h4>03. Make Contact</h4>
+                <p>
+                  In this space market-facing, yet UI work flows , or bake it
+                  in. Red flag we neef the day.
+                </p>
+                <h6>Make Contact</h6>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-    </secction>
+    </section>
     <!-- works_part end -->
 
     <!-- All JS link here-->
