medium device ok

--- a/index.html
+++ b/index.html
@@ -272,12 +272,14 @@
     <section id="works_sec" class="works_part">
       <div class="container">
         <div class="row">
-          <h2>How it works?</h2>
-          <p class="col-md-4">
-            In this space market-facing, yet UI work flows , or bake it in. Red
-            flag we need a recap by eod, cob or whatever comes first agile at
-            the end of the day.
-          </p>
+          <div class="common_heading">
+            <h2>How it works?</h2>
+            <p class="col-md-4">
+              In this space market-facing, yet UI work flows , or bake it in.
+              Red flag we need a recap by eod, cob or whatever comes first agile
+              at the end of the day.
+            </p>
+          </div>
           <div class="row">
             <div class="col-md-4">
               <div class="work_item active">
@@ -317,6 +319,270 @@
       </div>
     </section>
     <!-- works_part end -->
+    <!-- service_part start -->
+    <section id="service_sec" class="service_part">
+      <div class="container">
+        <div class="row">
+          <div class="common_heading">
+            <h2>Services</h2>
+            <p class="col-md-4">
+              In this space market-facing, yet UI work flows , or bake it in.
+              Red flag we need a first agile at the end of the day.
+            </p>
+          </div>
+        </div>
+        <div class="row mt-5">
+          <div class="col-md-6">
+            <div class="service_item">
+              <img src="image/service_item.png" alt="" />
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="service_item_content">
+              <div class="service_item_box">
+                <h3>Renting</h3>
+                <p>
+                  In this space market-facing, yet UI work flows , or bake it
+                  in. Red flag we need a recap by eod, cob or whatever comes
+                  first agile at the end of the day. Not enough bandwidth
+                  closing these latest prospects is like putting socks on an
+                  octopus, yet due diligence
+                </p>
+              </div>
+              <div class="service_item_box">
+                <h3>Selling</h3>
+                <p>
+                  In this space market-facing, yet UI work flows , or bake it
+                  in. Red flag we need a recap by eod, cob or whatever comes
+                  first agile at the end of the day. Not enough bandwidth
+                  closing these latest prospects is like putting socks on an
+                  octopus, yet due diligence
+                </p>
+              </div>
+              <div class="service_item_box">
+                <h3>Building</h3>
+                <p>
+                  In this space market-facing, yet UI work flows , or bake it
+                  in. Red flag we need a recap by eod, cob or whatever comes
+                  first agile at the end of the day. Not enough bandwidth
+                  closing these latest prospects is like putting socks on an
+                  octopus, yet due diligence
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- service_part end -->
+    <!-- agent_part start -->
+    <section id="agent_sec" class="agent_part">
+      <div class="container">
+        <div class="row">
+          <div class="common_heading">
+            <h2>Meet Our Agents</h2>
+            <p class="col-md-4">
+              In this space market-facing, yet UI work flows , or bake it in.
+              Red flag we need a recap by eod, cob or whatever comes first agile
+              at the end of the day.
+            </p>
+          </div>
+          <div class="col-md-4">
+            <div class="appartment_item">
+              <div class="appartment_item_img">
+                <img src="image/agent_item.png" alt="" />
+              </div>
+              <div class="appartment_item_content">
+                <h5>Agent</h5>
+                <span class="appartment_price">Mr. Luke Skywalker</span>
+                <div class="app_right_bottom social_link">
+                  <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                  <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                  <a href="#"><i class="fa-brands fa-pinterest"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="appartment_item">
+              <div class="appartment_item_img">
+                <img src="image/agent_item.png" alt="" />
+              </div>
+              <div class="appartment_item_content">
+                <h5>Agent</h5>
+                <span class="appartment_price">Mr. Luke Skywalker</span>
+                <div class="app_right_bottom social_link">
+                  <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                  <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                  <a href="#"><i class="fa-brands fa-pinterest"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="appartment_item">
+              <div class="appartment_item_img">
+                <img src="image/agent_item.png" alt="" />
+              </div>
+              <div class="appartment_item_content">
+                <h5>Agent</h5>
+                <span class="appartment_price">Mr. Luke Skywalker</span>
+                <div class="app_right_bottom social_link">
+                  <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                  <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                  <a href="#"><i class="fa-brands fa-pinterest"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- agent_part end -->
+    <!-- adds_part start -->
+    <section id="adds_sec" class="adds_part">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <div class="adds_part_img">
+              <img src="image/add_item.png" alt="" />
+              <span
+                ><i class="fa-solid fa-location-dot"></i>
+                Melbourne,Australia</span
+              >
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="adds_part_content">
+              <h3>Super Awesome Add</h3>
+              <p>
+                In this space market-facing, yet UI work flows , or bake it in.
+                Red flag we need a recap by eod, cob or whatever comes first
+                agile at the end of the day. Not enough bandwidth closing these
+                latest prospects is like putting socks on an octopus, yet due
+                diligence
+              </p>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="adds_part_content">
+              <h3>Super Awesome Add</h3>
+              <p>
+                In this space market-facing, yet UI work flows , or bake it in.
+                Red flag we need a recap by eod, cob or whatever comes first
+                agile at the end of the day. Not enough bandwidth closing these
+                latest prospects is like putting socks on an octopus, yet due
+                diligence
+              </p>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="adds_part_img">
+              <img src="image/add_item.png" alt="" />
+              <span
+                ><i class="fa-solid fa-location-dot"></i>
+                Melbourne,Australia</span
+              >
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="adds_part_img">
+              <img src="image/add_item.png" alt="" />
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="adds_part_content">
+              <h3>Super Awesome Add</h3>
+              <p>
+                In this space market-facing, yet UI work flows , or bake it in.
+                Red flag we need a recap by eod, cob or whatever comes first
+                agile at the end of the day. Not enough bandwidth closing these
+                latest prospects is like putting socks on an octopus, yet due
+                diligence
+              </p>
+              <button class="common_btn adds_btn">Show Me More</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- adds_part end -->
+    <!-- footer_part start -->
+    <footer id="footer_sec" class="footer_part">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8">
+            <h2>
+              luxestate<br />
+              Explore Real Estate
+            </h2>
+          </div>
+          <div class="col-md-4">
+            <div class="footer_search">
+              <input
+                type="search"
+                name="#"
+                id="#"
+                placeholder="Subscribe To Our Newsletter"
+              />
+              <i class="fa-solid fa-right-long"></i>
+            </div>
+          </div>
+        </div>
+        <hr />
+        <div class="row footer_bottom">
+          <div class="col-md-4">
+            <div class="footer_logo">
+              <a href="#"><h3>luxestate</h3></a>
+              <p>
+                &#169; 2019 - luxestate,<br />
+                All Right Reserved
+              </p>
+            </div>
+          </div>
+          <div class="col-md-2">
+            <div class="footer_menu">
+              <h6>LUXESTATE</h6>
+              <ul>
+                <li><a href="#">Agents</a></li>
+                <li><a href="#">Hunters</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-md-2">
+            <div class="footer_menu">
+              <h6>COMPANY</h6>
+              <ul>
+                <li><a href="#">Menu</a></li>
+                <li><a href="#">FAQ</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">Social</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-md-2">
+            <div class="footer_menu">
+              <h6>PRODUCT</h6>
+              <ul>
+                <li><a href="#">Appartments</a></li>
+                <li><a href="#">How It Works</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-md-2">
+            <div class="footer_menu">
+              <h6>Service</h6>
+              <ul>
+                <li><a href="#">Renting</a></li>
+                <li><a href="#">Selling</a></li>
+                <li><a href="#">Building</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- footer_part end -->
 
     <!-- All JS link here-->
     <script src="js/jquery-3.6.0.min.js"></script>
