small device responsive

--- a/index.html
+++ b/index.html
@@ -64,14 +64,14 @@
           class="carousel slide"
           data-bs-ride="carousel"
         >
-          <div class="carousel-inner row">
-            <div class="carousel-item active col-md-10 offset-md-2">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
               <img src="image/banner_1.png" class="d-block w-100" alt="..." />
             </div>
-            <div class="carousel-item col-md-10 offset-md-2">
+            <div class="carousel-item">
               <img src="image/banner_1.png" class="d-block w-100" alt="..." />
             </div>
-            <div class="carousel-item col-md-10 offset-md-2">
+            <div class="carousel-item">
               <img src="image/banner_1.png" class="d-block w-100" alt="..." />
             </div>
             <div class="banner_content">
@@ -80,7 +80,6 @@
                 <input
                   type="search"
                   name="search-location"
-                  id="#"
                   placeholder="Search-Location"
                 />
                 <i class="fa-solid fa-magnifying-glass"></i>
@@ -164,7 +163,7 @@
           <div class="col-md-4">
             <div class="appartment_item">
               <div class="appartment_item_img">
-                <img src="image/rent_item.png" alt="" />
+                <img src="image/rent_item.png" alt="" class="img-fluid" />
               </div>
               <div class="appartment_item_content">
                 <h5>Random Street, Apt B453, New York</h5>
@@ -179,7 +178,7 @@
           <div class="col-md-4">
             <div class="appartment_item">
               <div class="appartment_item_img">
-                <img src="image/rent_item.png" alt="" />
+                <img src="image/rent_item.png" alt="" class="img-fluid" />
               </div>
               <div class="appartment_item_content">
                 <h5>Random Street, Apt B454, New York</h5>
@@ -194,7 +193,7 @@
           <div class="col-md-4">
             <div class="appartment_item">
               <div class="appartment_item_img">
-                <img src="image/rent_item.png" alt="" />
+                <img src="image/rent_item.png" alt="" class="img-fluid" />
               </div>
               <div class="appartment_item_content">
                 <h5>Random Street, Apt B455, New York</h5>
@@ -209,7 +208,7 @@
           <div class="col-md-4">
             <div class="appartment_item">
               <div class="appartment_item_img">
-                <img src="image/rent_item.png" alt="" />
+                <img src="image/rent_item.png" alt="" class="img-fluid" />
               </div>
               <div class="appartment_item_content">
                 <h5>Random Street, Apt B456, New York</h5>
@@ -224,7 +223,7 @@
           <div class="col-md-4">
             <div class="appartment_item">
               <div class="appartment_item_img">
-                <img src="image/rent_item.png" alt="" />
+                <img src="image/rent_item.png" alt="" class="img-fluid" />
               </div>
               <div class="appartment_item_content">
                 <h5>Random Street, Apt B453, New York</h5>
@@ -239,7 +238,7 @@
           <div class="col-md-4">
             <div class="appartment_item">
               <div class="appartment_item_img">
-                <img src="image/rent_item.png" alt="" />
+                <img src="image/rent_item.png" alt="" class="img-fluid" />
               </div>
               <div class="appartment_item_content">
                 <h5>Random Street, Apt B453, New York</h5>
@@ -255,7 +254,6 @@
             <input
               type="search"
               name="search-location"
-              id="#"
               placeholder="Search-Location"
             />
             <i class="fa-solid fa-magnifying-glass"></i>
@@ -280,39 +278,39 @@
               at the end of the day.
             </p>
           </div>
-          <div class="row">
-            <div class="col-md-4">
-              <div class="work_item active">
-                <h2>01</h2>
-                <h4>01. Find Your Location</h4>
-                <p>
-                  In this space market-facing, yet UI work flows , or bake it
-                  in. Red flag we neef the day.
-                </p>
-                <h6>Find Location</h6>
-              </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4">
+            <div class="work_item active">
+              <h2>01</h2>
+              <h4>01. Find Your Location</h4>
+              <p>
+                In this space market-facing, yet UI work flows , or bake it in.
+                Red flag we neef the day.
+              </p>
+              <h6>Find Location</h6>
             </div>
-            <div class="col-md-4">
-              <div class="work_item">
-                <h2>02</h2>
-                <h4>02. Find Appartment</h4>
-                <p>
-                  In this space market-facing, yet UI work flows , or bake it
-                  in. Red flag we neef the day.
-                </p>
-                <h6>Find Appartment</h6>
-              </div>
+          </div>
+          <div class="col-md-4">
+            <div class="work_item">
+              <h2>02</h2>
+              <h4>02. Find Appartment</h4>
+              <p>
+                In this space market-facing, yet UI work flows , or bake it in.
+                Red flag we neef the day.
+              </p>
+              <h6>Find Appartment</h6>
             </div>
-            <div class="col-md-4">
-              <div class="work_item">
-                <h2>03</h2>
-                <h4>03. Make Contact</h4>
-                <p>
-                  In this space market-facing, yet UI work flows , or bake it
-                  in. Red flag we neef the day.
-                </p>
-                <h6>Make Contact</h6>
-              </div>
+          </div>
+          <div class="col-md-4">
+            <div class="work_item">
+              <h2>03</h2>
+              <h4>03. Make Contact</h4>
+              <p>
+                In this space market-facing, yet UI work flows , or bake it in.
+                Red flag we neef the day.
+              </p>
+              <h6>Make Contact</h6>
             </div>
           </div>
         </div>
@@ -333,8 +331,8 @@
         </div>
         <div class="row mt-5">
           <div class="col-md-6">
-            <div class="service_item">
-              <img src="image/service_item.png" alt="" />
+            <div class="service_item text-center">
+              <img src="image/service_item.png" alt="" class="img-fluid" />
             </div>
           </div>
           <div class="col-md-6">
@@ -390,7 +388,7 @@
           <div class="col-md-4">
             <div class="appartment_item">
               <div class="appartment_item_img">
-                <img src="image/agent_item.png" alt="" />
+                <img src="image/agent_item.png" alt="" class="img-fluid" />
               </div>
               <div class="appartment_item_content">
                 <h5>Agent</h5>
@@ -406,7 +404,7 @@
           <div class="col-md-4">
             <div class="appartment_item">
               <div class="appartment_item_img">
-                <img src="image/agent_item.png" alt="" />
+                <img src="image/agent_item.png" alt="" class="img-fluid" />
               </div>
               <div class="appartment_item_content">
                 <h5>Agent</h5>
@@ -422,7 +420,7 @@
           <div class="col-md-4">
             <div class="appartment_item">
               <div class="appartment_item_img">
-                <img src="image/agent_item.png" alt="" />
+                <img src="image/agent_item.png" alt="" class="img-fluid" />
               </div>
               <div class="appartment_item_content">
                 <h5>Agent</h5>
@@ -522,7 +520,6 @@
               <input
                 type="search"
                 name="#"
-                id="#"
                 placeholder="Subscribe To Our Newsletter"
               />
               <i class="fa-solid fa-right-long"></i>
