--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
         </div>
         <hr />
         <div class="row footer_bottom">
-          <div class="col-md-4">
+          <div class="col-12 col-md-4">
             <div class="footer_logo">
               <a href="#"><h3>luxestate</h3></a>
               <p>
@@ -537,7 +537,7 @@
               </p>
             </div>
           </div>
-          <div class="col-md-2">
+          <div class="col-6 col-md-2">
             <div class="footer_menu">
               <h6>LUXESTATE</h6>
               <ul>
@@ -546,7 +546,7 @@
               </ul>
             </div>
           </div>
-          <div class="col-md-2">
+          <div class="col-6 col-md-2">
             <div class="footer_menu">
               <h6>COMPANY</h6>
               <ul>
@@ -557,7 +557,7 @@
               </ul>
             </div>
           </div>
-          <div class="col-md-2">
+          <div class="col-6 col-md-2">
             <div class="footer_menu">
               <h6>PRODUCT</h6>
               <ul>
@@ -566,7 +566,7 @@
               </ul>
             </div>
           </div>
-          <div class="col-md-2">
+          <div class="col-6 col-md-2">
             <div class="footer_menu">
               <h6>Service</h6>
               <ul>
